Fixing layout bug

--- a/src/layout/Container.module.css
+++ b/src/layout/Container.module.css
@@ -1,6 +1,5 @@
 .container {
   width: 90%;
-  min-height: 80vh;
   background-color: var(--light);
   box-shadow: 0px 3px 61px 7px rgba(0, 0, 0, 0.39);
   -webkit-box-shadow: 0px 3px 61px 7px rgba(0, 0, 0, 0.39);
